--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: npm
+    
+      - name: Install dependencies
+        run: npm install
 
       - name: Install dependencies
         run: npm ci
